--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ html {
 
 #easy {
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 300px;
+  max-height: 300px;
   width: 50vw;
   height: 50vw;
   border-radius: 50%;
@@ -19,7 +21,15 @@ html {
   font-size: 3.5em;
   border: 0.25em solid silver;
   color: white;
+  text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+  #easy {
+    font-size: 15vw;
+  }
+}
+
 button:focus {
   outline: none;
   box-shadow: none;
