--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ html {
   border: 0.25em solid silver;
   color: white;
   text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 @media only screen and (max-width: 600px) {
